Added GET request and ability to play sounds

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Amanda's React Boilerplate</title>
+  <title>iNaturalist Observations Search Tool</title>
 </head>
 <body>
   <div id="app"></div>
