--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
   <title>iNaturalist Observations Search Tool</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
-<body>
+<body style="background-color: #E8FCCF">
   <div id="app"></div>
   <script src="bundle.js"></script>
 </body>
