--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <title>iNaturalist Observations Search Tool</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
-<body style="background-color: #E8FCCF">
+<body style="background-color: #F0FDE0">
   <div id="app"></div>
   <script src="bundle.js"></script>
 </body>
